change script.js file

--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                             </div>
                             <div class="contact-1 ">
                                 <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                <input type="mail" placeholder="Email" id="mail">
+                                <input type="email" placeholder="Email" id="mail">
                                 <small>Error message</small>
 
                             </div>
